<resources>
    <string name="app_name">MediPlus</string>
    <string name="forget_password">forget password</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Patient Login</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="drlogin">Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="enter_full_name">Enter Name</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">Email</string>
    <string name="next_btn">NEXT</string>
    <string name="Signup">SIGN UP</string>
    <string name="Verify">VERIFY AND SIGNUP</string>


    <string name="title_activity_search_doctor_speciality">SearchDoctorSpecialityActivity</string>
    <string name="tab_text_1">Doctors</string>
    <string name="tab_text_2">Speciality</string>
    <string name="tab_text_3">Pending</string>
    <string name="tab_text_4">Accepted</string>
    <string name="tab_text_5">Declined</string>
    <string name="tab_text_6">Hospitalisations</string>
    <string name="tab_text_7">Consultations</string>
    <string name="title_activity_appointments">AppointmentsActivity</string>
    <string name="title_activity_medical_folder">MedicalFolderActivity</string>
    <string name="title_activity_doctor_localisation">Map</string>
    <string name="title_activity_doctor_appointments">DoctorAppointments</string>
    <string name="title_activity_my_patient_medical_folder">MyPatientMedicalFolderActivity</string>


    <string-array name="doctorSpeciality">
        <item>Plastic surgery</item>
        <item>Orthopedics</item>
        <item>Cardiologist</item>
        <item>Radiologist</item>
        <item>Dermatologist</item>
    </string-array>


    <array name="medication_types">
        <item>Pill</item>
        <item>Liquid</item>
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Inhaler</item>
        <item>Injection</item>
        <item>Other</item>
    </array>


    <array name="Schedule_types">
        <item>Exercise</item>
        <item>Gym</item>
        <item>Food</item>
        <item>Visit Doctor</item>
        <item>Sleep</item>
        <item>Other</item>
    </array>

    <array name="Department">
        <item>General Physician</item>
        <item>Cardiologist</item>
        <item>Dermatologist</item>
        <item>Dentist</item>
        <item>Orthopedics</item>
        <item>Radiologist</item>
        <item>Psychiatrist</item>
        <item>Psychologist</item>
        <item>Pediatrician</item>
        <item>Dermatologist</item>
        <item>Other</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_name">MediPlus</string>
    <string name="homeservice">Home Service</string>
    <string name="enter_otp_here">ENTER OTP HERE</string>
    <string name="Callback">Callback Request</string>
    <string name="find_doctor">Find Doctor</string>


    //covid

    <string name="title_activity_main_news">MainNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_signout">Sign out</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_first_page">FirstPage</string>

    <string name="menu_profile">Account Settings</string>
    <string name="menu_news">News</string>
    <string name="menu_state">COVID-19 Test</string>
    <string name="menu_map">Map</string>
    <string name="menu_talkto">Talk to Doctor</string>
    <string name="menu_statistics">Statistics</string>

    <string name="action_logout">Logout</string>


    <string name="search">Search</string>
    <string name="district">District</string>
    <string name="lsgd">LSGD</string>
    <string name="wards">Wards</string>

    <string name="pin_codes">Enter Pin Code</string>
    <string name="start_tracking_button">Start Tracking</string>
    <string name="channel_name">VaccineNotificationChannel</string>
    <string name="channel_description">This notification channel will be used to create a notification whenever a slot is available for the given pincode</string>
    <string name="channel_id">CHANNEL33</string>
    <string name="service_started_message">Vaccine tracking has started! Will notify when slot is available</string>
    <string name="pick_date">Date</string>

</resources>